src/test/ui/nll/issue-53807.rs
pub fn main(){
    let maybe = Some(vec![true, true]);
    loop {
        if let Some(thing) = maybe {
//~^ ERROR use of moved value
        }
    }
}
